--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
   <meta HTTP-EQUIV="expires" CONTENT="0">
-  <title>固安县环境保护网格化管理平台</title>
+  <title>大数据管理平台</title>
   <link rel="shortcut icon" href="static/imgs/title/logo-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="static/css/bootstrap.css">
   <link rel="stylesheet" href="static/calendpoll/bootstrap-year-calendar.css" />
